<resources>
    <string name="app_name">MyPly</string>

    <string name="hash_keyword">#%s</string>

    <string name="home_order_recent">최신</string>
    <string name="home_order_popular">인기</string>
    <string name="home_order_preference">내 취향</string>

    <string name="keep">보관함</string>
    <string name="keep_count">뮤직 폴라로이드 %d개</string>
    <string name="keep_no_memo">플레이리스트가 아직 없어요.</string>
    <string name="keep_empty">나의 기록을 입력해 주세요.</string>

    <string name="search_placeholder">검색어를 입력해주세요.</string>
    <string name="search_subtitle">지금 뜨는 인기 검색어</string>
    <string name="search_btn">검색</string>
    <string name="search_title">검색</string>

    <string name="keep_detail_title">기록 보기</string>
    <string name="keep_detail_placeholder">플레이리스트에 대한 나의 감상 기록을 작성해보세요.</string>
    <string name="keep_detail_memo_title">나의 감상 기록</string>
    <string name="keep_write_title">기록 쓰기</string>
    <string name="keep_write_save">저장하기</string>
    <string name="keep_write_memo_title">나의 감상 기록</string>
    <string name="keep_write_hint">플레이리스트에 대한 나의 감상을 기록해 보세요.</string>
    <string name="keep_write_count">%d/200</string>
    <string name="keep_delete_title">플레이리스트를 보관함에서 삭제할까요?</string>
    <string name="keep_delete_body">작성된 감상 기록이 함께 삭제됩니다.</string>
    <string name="keep_delete_pos">삭제</string>
    <string name="keep_delete_neg">취소</string>


    <string name="mypage">마이페이지</string>
    <string name="mypage_keyword">%s의 취향 키워드</string>
    <string name="mypage_service_info">서비스 정보</string>
    <string name="mypage_app_version">앱 버전</string>
    <string name="mypage_team">만든 사람들</string>
    <string name="mypage_open_source">Open Source License</string>
    <string name="mypage_user_support">사용자 지원</string>
    <string name="mypage_edit_nickname">닉네임 수정</string>
    <string name="mypage_contact">문의하기</string>

    <string name="mypage_edit_title">편집하기</string>
    <string name="mypage_edit_subtitle">플레이리스트 취향을 선택해 주세요.</string>
    <string name="mypage_edit_desc">1개 이상 15개 이하의 키워드를 선택할 수 있어요.</string>
    <string name="mypage_edit_start_btn">시작하기</string>

    <string name="mypage_nickname_title">닉네임 수정</string>
    <string name="mypage_nickname_subtitle">새로운 닉네임을 입력해 주세요.</string>
    <string name="mypage_nickname_length">%d/8</string>
    <string name="mypage_nickname_next_btn">다음</string>

    <string name="keep_share">공유하기</string>
    <string name="share_change_title">프레임 색상 변경하기</string>
    <string name="keep_share_user_name">%s의 기억에 남은 playlist</string>
    <string name="share_button">공유하기</string>
    <string name="share_instagram">인스타그램에 공유</string>
    <string name="save_gallery">갤러리에 저장</string>
    <string name="toast_save_image">갤러리에 폴라로이드가 저장되었어요.</string>
    <string name="search_no_result">‘%s’ 에 대한 검색 결과가 없어요.\n다른 키워드로 검색해 보세요.</string>
    <string name="onboarding_next">다음</string>
    <string name="onboarding_1">유튜브 영상 플레이리스트를\n한 곳에서 모아볼 수 있어요.</string>
    <string name="onboarding_2">내 취향에 맞는 플레이리스트를\n키워드 검색을 통해 찾을 수 있어요.</string>
    <string name="onboarding_3">플레이리스트에 대한 내 생각을\n기록하고 공유할 수 있어요</string>
    <string name="onboarding_start_btn">시작하기</string>

    <string name="playlist_write_memo"><u>감상 쓰기</u></string>
    <string name="playlist_save">플레이리스트를 저장했어요.</string>
    <string name="playlist_delete">보관함에서 플레이리스트를 삭제했어요.</string>
    <string name="keep_no_memo_inform">새로운 플레이리스트를\n보관함에 추가해 보세요.</string>

</resources>
