<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.cocaine.myply.feature.ui.mypage.MyPageViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/beige">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/mypage_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="9dp"
            android:paddingStart="20dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/home_logo"
                style="@style/H1_Semibold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mypage"
                android:textColor="@color/gray_90" />
        </com.google.android.material.appbar.MaterialToolbar>

        <TextView
            android:id="@+id/mypage_my_keyword"
            style="@style/H2_Semibold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:text="@{@string/mypage_keyword(viewModel.nickname)}"
            android:textColor="@color/gray_80"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mypage_toolbar"
            tools:text="00의 취향 키워드" />

        <ImageView
            android:id="@+id/mypage_my_keyword_edit"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_edit"
            app:layout_constraintBottom_toBottomOf="@id/mypage_my_keyword"
            app:layout_constraintStart_toEndOf="@id/mypage_my_keyword"
            app:layout_constraintTop_toTopOf="@id/mypage_my_keyword"
            app:tint="@color/gray_50" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mypage_my_keyword_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/mypage_my_keyword"
            tools:itemCount="10"
            tools:listitem="@layout/item_mypage_keyword" />

        <View
            android:id="@+id/mypage_divider"
            style="@style/Divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/mypage_my_keyword_list" />

        <TextView
            android:id="@+id/mypage_service_info"
            style="@style/Body2_Semibold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:text="@string/mypage_service_info"
            android:textColor="@color/gray_60"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mypage_divider" />

        <TextView
            android:id="@+id/mypage_app_version"
            style="@style/Body1_Semibold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:paddingVertical="14dp"
            android:text="@string/mypage_app_version"
            android:textColor="@color/gray_80"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mypage_service_info" />

        <TextView
            android:id="@+id/mypage_app_version_data"
            style="@style/Body1_Semibold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="1.0"
            android:textColor="@color/gray_60"
            app:layout_constraintBottom_toBottomOf="@id/mypage_app_version"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/mypage_app_version" />

        <View
            style="@style/Divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintBottom_toTopOf="@id/mypage_team"
            app:layout_constraintTop_toBottomOf="@id/mypage_app_version" />

        <TextView
            android:id="@+id/mypage_team"
            style="@style/Body1_Semibold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="8dp"
            android:paddingVertical="14dp"
            android:text="@string/mypage_team"
            android:textColor="@color/gray_80"
            app:layout_constraintEnd_toStartOf="@id/mypage_team_more"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mypage_app_version" />

        <ImageView
            android:id="@+id/mypage_team_more"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_right"
            app:layout_constraintBottom_toBottomOf="@id/mypage_team"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/mypage_team" />

        <View
            style="@style/Divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintBottom_toTopOf="@id/mypage_open_source"
            app:layout_constraintTop_toBottomOf="@id/mypage_team" />

        <TextView
            android:id="@+id/mypage_open_source"
            style="@style/Body1_Semibold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="8dp"
            android:paddingVertical="14dp"
            android:text="@string/mypage_open_source"
            android:textColor="@color/gray_80"
            app:layout_constraintEnd_toStartOf="@id/mypage_open_source_more"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mypage_team" />

        <ImageView
            android:id="@+id/mypage_open_source_more"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_right"
            app:layout_constraintBottom_toBottomOf="@id/mypage_open_source"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/mypage_open_source" />

        <TextView
            android:id="@+id/mypage_user_support"
            style="@style/Body2_Semibold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:text="@string/mypage_user_support"
            android:textColor="@color/gray_60"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mypage_open_source" />

        <TextView
            android:id="@+id/mypage_edit_nickname"
            style="@style/Body1_Semibold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="8dp"
            android:paddingVertical="14dp"
            android:text="@string/mypage_edit_nickname"
            android:textColor="@color/gray_80"
            app:layout_constraintEnd_toStartOf="@id/mypage_edit_nickname_more"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mypage_user_support" />

        <ImageView
            android:id="@+id/mypage_edit_nickname_more"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_right"
            app:layout_constraintBottom_toBottomOf="@id/mypage_edit_nickname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/mypage_edit_nickname" />

        <TextView
            android:id="@+id/mypage_contact"
            style="@style/Body1_Semibold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="8dp"
            android:paddingVertical="14dp"
            android:text="@string/mypage_contact"
            android:textColor="@color/gray_80"
            app:layout_constraintEnd_toStartOf="@id/mypage_edit_contact_more"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mypage_edit_nickname" />

        <ImageView
            android:id="@+id/mypage_edit_contact_more"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_right"
            app:layout_constraintBottom_toBottomOf="@id/mypage_contact"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/mypage_contact" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
