<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/beige">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/home_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="4dp"
            android:paddingStart="9dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry">

            <ImageView
                android:id="@+id/home_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_logo"
                app:tint="@color/primary_green_basic" />
        </com.google.android.material.appbar.MaterialToolbar>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/home_playlist_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            app:checkedChip="@id/home_recent"
            app:chipSpacingHorizontal="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_toolbar"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/home_recent"
                style="@style/MyPly.Chip.Home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_order_recent" />

            <com.google.android.material.chip.Chip
                android:id="@+id/home_popular"
                style="@style/MyPly.Chip.Home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_order_popular" />

            <com.google.android.material.chip.Chip
                android:id="@+id/home_preference"
                style="@style/MyPly.Chip.Home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_order_preference" />
        </com.google.android.material.chip.ChipGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/home_playlist"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:overScrollMode="never"
            android:paddingHorizontal="20dp"
            android:paddingTop="4dp"
            android:paddingBottom="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_playlist_order"
            tools:listitem="@layout/item_playlist" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
